chore: sort package.json

--- a/workspaces/cli/package.json
+++ b/workspaces/cli/package.json
@@ -1,6 +1,11 @@
 {
   "name": "@nodecg-release-test/cli",
   "version": "15.4.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Hoishin/nodecg-release-test.git",
+    "directory": "workspaces/cli"
+  },
   "type": "module",
   "main": "dist/main.js",
   "files": [
@@ -38,14 +43,9 @@
     "type-fest": "^4.33.0",
     "typescript": "~5.7.3"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Hoishin/nodecg-release-test.git",
-    "directory": "workspaces/cli"
-  },
   "publishConfig": {
-    "registry": "https://registry.npmjs.org",
     "access": "public",
-    "provenance": true
+    "provenance": true,
+    "registry": "https://registry.npmjs.org"
   }
 }
