--- a/workspaces/database-adapter-sqlite-legacy/package.json
+++ b/workspaces/database-adapter-sqlite-legacy/package.json
@@ -1,13 +1,18 @@
 {
   "name": "@nodecg-release-test/database-adapter-sqlite-legacy",
   "version": "7.0.3",
-  "main": "dist/database-adapter.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Hoishin/nodecg-release-test.git",
+    "directory": "workspaces/database-adapter-sqlite-legacy"
+  },
   "exports": {
     ".": {
       "source": "./src/database-adapter.ts",
       "default": "./dist/database-adapter.js"
     }
   },
+  "main": "dist/database-adapter.js",
   "files": [
     "dist",
     "src"
@@ -28,14 +33,9 @@
     "del-cli": "^6.0.0",
     "typescript": "~5.7.3"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Hoishin/nodecg-release-test.git",
-    "directory": "workspaces/database-adapter-sqlite-legacy"
-  },
   "publishConfig": {
-    "registry": "https://registry.npmjs.org",
     "access": "public",
-    "provenance": true
+    "provenance": true,
+    "registry": "https://registry.npmjs.org"
   }
 }
