--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -74,6 +74,8 @@ jobs:
       - run: npm ci
       - run: npm run build
 
+      - run: echo 'add tests'
+
   pr-release:
     permissions:
       contents: read
