--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,6 +14,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event_name }}-${{ github.event.pull_request.number || github.sha }}
   cancel-in-progress: ${{ github.event_name == 'pull_request' }}
 
+permissions:
+  contents: read
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -41,22 +44,12 @@ jobs:
       - run: npm run typetest
 
   build-test:
-    strategy:
-      matrix:
-        node-version:
-          - 20
-          - 22
-          - 24
-        os:
-          - ubuntu-latest
-          - windows-latest
-      fail-fast: false
-    runs-on: ${{matrix.os}}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v6
         with:
-          node-version: ${{matrix.node-version}}
+          node-version: 24
           cache: npm
       - run: corepack enable npm
 
@@ -83,6 +76,8 @@ jobs:
 
       - run: npm ci
       - run: npm run build
+
+      - run: echo 'add tests'
 
   pr-release:
     permissions:
@@ -113,24 +108,6 @@ jobs:
           npm publish --tag pr${{ github.event.number }}
           npx tsx scripts/prepare-publish-types.ts
           npm publish --tag pr${{ github.event.number }}
-
-  pr-dry-run-container-build:
-    if: github.event_name == 'pull_request'
-    strategy:
-      matrix:
-        os:
-          - ubuntu-24.04
-          - ubuntu-24.04-arm
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v5
-      - uses: docker/setup-buildx-action@v3
-      - uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: false
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
 
   release-please:
     permissions:
