--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -161,8 +161,8 @@ jobs:
           cache: npm
       - run: corepack enable npm
       - run: |
-          git config --global user.email "action@github.com"
-          git config --global user.name "GitHub Action"
+          git config --global user.email "ci@nodecg.dev"
+          git config --global user.name "NodeCG"
       - run: |
           npm install
           if git diff --quiet package-lock.json; then
