fix: this time for sure

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -145,13 +145,14 @@ jobs:
       - release-please
     if: ${{ needs.release-please.outputs.pr }}
     runs-on: ubuntu-latest
-    env:
-      GH_TOKEN: ${{ secrets.NODECG_MONOREPO_GH_TOKEN }}
     steps:
       - uses: actions/checkout@v5
         with:
           fetch-depth: 0
+          token: ${{ secrets.NODECG_MONOREPO_GH_TOKEN }}
       - run: gh auth setup-git
+        env:
+          GH_TOKEN: ${{ secrets.NODECG_MONOREPO_GH_TOKEN }}
       - run: gh pr checkout ${{ fromJson(needs.release-please.outputs.pr).number }}
       - uses: actions/setup-node@v6
         with:
